--- a/style.css
+++ b/style.css
@@ -7,12 +7,18 @@ Terciary Color (Dark Grey): #3F3F3F;
 White (White): #FFFFFF;
 */
 body {
-  background-color: #ffffff;
+  background-color: #707070;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.6;
   color: #202020;
+}
+
+header {
+  background-color: #3F3F3F;
+  padding: 10px;
+  margin: 0 auto;
 }
 
 h1, h2, h3, h4 {
@@ -41,7 +47,7 @@ img {
 }
 
 a {
-  color: #3F3F3F;
+  color: #707070;
   text-decoration: none;
 }
 a:visited {
