--- a/style.css
+++ b/style.css
@@ -101,13 +101,16 @@ img {
 
 #hero h1 {
   text-align: center;
-  margin: 0;
-  padding: 0.67em 0;
+  margin: 20px;
+  padding: 1em 0;
+  color: #FB6072;
 }
 
 #hero p {
   text-align: center;
   margin: 25px;
+  padding-left: 10px;
+  color: #FFFFFF;
 }
 
 #aboutme h1 {
@@ -118,7 +121,7 @@ img {
 }
 
 #story{
-
+  margin:  0  0 10px 10px;
 }
 
 .headshot{
@@ -197,10 +200,21 @@ a:focus {
 
 footer {
   display: inline-block;
-  margin: 10px 15px;
+  text-align: center;
+  padding: 10px 15px;
   width: 100%;
+  background-color: #3F3F3F;
 }
 
-footer .socials{
+.socials a {
+  margin: 0 10px;
+}
+
+#contact p, #contact h2  {
+  color: #FFFFFF;
+}
+
+.socials svg {
   max-width: 60px;
+  max-height: auto;
 }
