CSS transitions and animations

--- a/style.css
+++ b/style.css
@@ -219,6 +219,34 @@ footer {
   max-height: auto;
 }
 
+@keyframes color-change {
+  from {fill: #edc655;}
+  to {fill: #f76414;}
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+
 @media only screen and (min-width: 640px) {
 
   header {
@@ -260,7 +288,9 @@ footer {
 }
 
 @media only screen and (min-width: 1024px) {
-
+  .col-md-6 {
+    width: 60%;
+  }
 
 
 }
