--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ img {
 .container{
   padding: 0 15px;
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #work .row {
@@ -249,6 +251,19 @@ footer {
 
 @media only screen and (min-width: 640px) {
 
+  .col-md-1 {width: 8.33%;}
+  .col-md-2 {width: 16.66%;}
+  .col-md-3 {width: 25%;}
+  .col-md-4 {width: 33.33%;}
+  .col-md-5 {width: 41.66%;}
+  .col-md-6 {width: 50%;}
+  .col-md-7 {width: 58.33%;}
+  .col-md-8 {width: 66.66%;}
+  .col-md-9 {width: 75%;}
+  .col-md-10 {width: 83.33%;}
+  .col-md-11 {width: 91.66%;}
+  .col-md-12 {width: 100%;}
+
   header {
     text-align: unset;
     padding: 20px 0 13px;
@@ -288,9 +303,17 @@ footer {
 }
 
 @media only screen and (min-width: 1024px) {
-  .col-md-6 {
-    width: 60%;
-  }
-
+  .col-lg-1 {width: 8.33%;}
+  .col-lg-2 {width: 16.66%;}
+  .col-lg-3 {width: 25%;}
+  .col-lg-4 {width: 33.33%;}
+  .col-lg-5 {width: 41.66%;}
+  .col-lg-6 {width: 50%;}
+  .col-lg-7 {width: 58.33%;}
+  .col-lg-8 {width: 66.66%;}
+  .col-lg-9 {width: 75%;}
+  .col-lg-10 {width: 83.33%;}
+  .col-lg-11 {width: 91.66%;}
+  .col-lg-12 {width: 100%;}
 
 }
