--- a/style.css
+++ b/style.css
@@ -325,6 +325,25 @@ footer {
     min-width: 250px;
   }
 
+  .navtoggle, .navtoggle.responsive {
+    position: relative;
+  }
+
+
+  .navtoggle.responsive nav {
+    padding: 0 0 0;
+  }
+  .navtoggle.responsive li  {
+    display: block;
+    padding: 0 0;
+    border-top: none;
+    text-align: center;
+  }
+
+  .navtoggle.responsive li:last-child  {
+    padding: 0 0 0;
+  }
+
   body{
     font-size: 18px;
 
