--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ Dark Color (Black): #202020;
 Terciary Color (Dark Grey): #3F3F3F;
 White (White): #FFFFFF;
 */
-
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -34,7 +33,7 @@ header {
   width: 100%;
 }
 
-header .container{
+header .container {
   text-align: unset;
 }
 
@@ -56,15 +55,16 @@ nav > ul {
   padding-right: 20px;
 }
 
-.navtoggle, .navtoggle.responsive {
+.navtoggle,
+.navtoggle.responsive {
   position: relative;
 }
-
 
 .navtoggle.responsive nav {
   padding: 50px 0 0;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
   padding: 10px 0;
   border-top: 1px solid #FB6072;
@@ -72,7 +72,7 @@ nav > ul {
   text-align: center;
 }
 
-.navtoggle.responsive li:last-child  {
+.navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
 
@@ -84,10 +84,13 @@ nav > ul > li > a {
   text-decoration: none;
 }
 
-
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   line-height: 1.4;
 }
+
 h1 {
   font-size: 2.75em;
   font-weight: 700;
@@ -102,21 +105,21 @@ h3 {
   font-size: 1.75em;
   font-weight: 400;
 }
+
 h4 {
   font-size: 1.35em;
   font-weight: 400;
 }
+
 img {
   width: 100%;
 }
-
-
 
 .logo {
   max-width: 150px;
 }
 
-.container{
+.container {
   padding: 0 15px;
   text-align: center;
   max-width: 1200px;
@@ -124,7 +127,8 @@ img {
 }
 
 #work .row {
-  padding-bottom: 25px; border-bottom: 1px solid #FB6072;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #FB6072;
 }
 
 #hero {
@@ -155,25 +159,25 @@ img {
   position: relative;
 }
 
-#story{
-  margin:  0  0 10px 10px;
+#story {
+  margin: 0 0 10px 10px;
 }
 
-.headshot{
+.headshot {
   width: 30%;
   padding: 10px;
   float: left;
 }
 
-#skills h2{
+#skills h2 {
   text-align: center;
 }
 
-#skills h3{
+#skills h3 {
   padding-left: 30px;
 }
 
-#skills .container{
+#skills .container {
   clear: left;
   display: block;
   text-align: left;
@@ -187,23 +191,27 @@ a {
   color: #707070;
   text-decoration: none;
 }
+
 a:visited {
   color: #FB6072;
   text-decoration: none;
 }
+
 a:hover {
   color: #FB6072;
   text-decoration: underline;
 }
+
 a:active {
   color: #FB6072;
 }
+
 a:focus {
   color: #FB6072;
   text-decoration: underline;
 }
 
-.button{
+.button {
   display: inline-block;
   margin: 25px;
   background-color: #ffffff;
@@ -214,9 +222,10 @@ a:focus {
   border-radius: 5px;
   transition: 0.2s opacity;
 }
+
 .button:hover {
-   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-   text-decoration: none;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  text-decoration: none;
 }
 
 .button.contact {
@@ -224,14 +233,11 @@ a:focus {
   color: #FFFFFF;
 }
 
-.button.cv{
+.button.cv{}
 
-}
-
-#project{
+#project {
   text-align: center;
 }
-
 
 footer {
   display: inline-block;
@@ -245,7 +251,8 @@ footer {
   margin: 0 10px;
 }
 
-#contact p, #contact h2  {
+#contact p,
+#contact h2 {
   color: #FFFFFF;
 }
 
@@ -255,18 +262,33 @@ footer {
 }
 
 @keyframes color-change {
-  from {fill: #edc655;}
-  to {fill: #f76414;}
+  from {
+    fill: #edc655;
+  }
+
+  to {
+    fill: #f76414;
+  }
 }
 
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
 
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
 
 .sun {
@@ -281,21 +303,54 @@ footer {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
-
 @media only screen and (min-width: 640px) {
+  .col-md-1 {
+    width: 8.33%;
+  }
 
-  .col-md-1 {width: 8.33%;}
-  .col-md-2 {width: 16.66%;}
-  .col-md-3 {width: 25%;}
-  .col-md-4 {width: 33.33%;}
-  .col-md-5 {width: 41.66%;}
-  .col-md-6 {width: 50%;}
-  .col-md-7 {width: 58.33%;}
-  .col-md-8 {width: 66.66%;}
-  .col-md-9 {width: 75%;}
-  .col-md-10 {width: 83.33%;}
-  .col-md-11 {width: 91.66%;}
-  .col-md-12 {width: 100%;}
+  .col-md-2 {
+    width: 16.66%;
+  }
+
+  .col-md-3 {
+    width: 25%;
+  }
+
+  .col-md-4 {
+    width: 33.33%;
+  }
+
+  .col-md-5 {
+    width: 41.66%;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-7 {
+    width: 58.33%;
+  }
+
+  .col-md-8 {
+    width: 66.66%;
+  }
+
+  .col-md-9 {
+    width: 75%;
+  }
+
+  .col-md-10 {
+    width: 83.33%;
+  }
+
+  .col-md-11 {
+    width: 91.66%;
+  }
+
+  .col-md-12 {
+    width: 100%;
+  }
 
   header {
     text-align: unset;
@@ -313,40 +368,41 @@ footer {
   }
 
   .navtoggle li:not(:last-child) {
-  display: inline-block;
-}
+    display: inline-block;
+  }
 
   .navtoggle li:last-child {
-  display: none;
-}
+    display: none;
+  }
 
-  .logo{
-    float:left;
+  .logo {
+    float: left;
     min-width: 250px;
   }
 
-  .navtoggle, .navtoggle.responsive {
+  .navtoggle,
+  .navtoggle.responsive {
     position: relative;
   }
 
-
   .navtoggle.responsive nav {
-    padding: 0 0 0;
+    padding: 0;
   }
-  .navtoggle.responsive li  {
-    padding: 0 0;
+
+  .navtoggle.responsive li {
+    padding: 0;
     border-top: none;
   }
 
-  .navtoggle.responsive li:last-child  {
-    padding: 0 0 0;
+  .navtoggle.responsive li:last-child {
+    padding: 0;
   }
 
-  body{
+  body {
     font-size: 18px;
-
   }
-  main{
+
+  main {
     padding-top: 175px;
   }
 
@@ -355,29 +411,62 @@ footer {
   }
 
   [class*="col-"] {
-  float: left;
-}
+    float: left;
+  }
 
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
-  .col-lg-1 {width: 8.33%;}
-  .col-lg-2 {width: 16.66%;}
-  .col-lg-3 {width: 25%;}
-  .col-lg-4 {width: 33.33%;}
-  .col-lg-5 {width: 41.66%;}
-  .col-lg-6 {width: 50%;}
-  .col-lg-7 {width: 58.33%;}
-  .col-lg-8 {width: 66.66%;}
-  .col-lg-9 {width: 75%;}
-  .col-lg-10 {width: 83.33%;}
-  .col-lg-11 {width: 91.66%;}
-  .col-lg-12 {width: 100%;}
+  .col-lg-1 {
+    width: 8.33%;
+  }
 
+  .col-lg-2 {
+    width: 16.66%;
+  }
+
+  .col-lg-3 {
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    width: 33.33%;
+  }
+
+  .col-lg-5 {
+    width: 41.66%;
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    width: 58.33%;
+  }
+
+  .col-lg-8 {
+    width: 66.66%;
+  }
+
+  .col-lg-9 {
+    width: 75%;
+  }
+
+  .col-lg-10 {
+    width: 83.33%;
+  }
+
+  .col-lg-11 {
+    width: 91.66%;
+  }
+
+  .col-lg-12 {
+    width: 100%;
+  }
 }
