Inter-browser font fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background-color: #878787;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: normal;
   line-height: 1.6;
   color: #202020;
 }
